@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2010-12-21"
+#define RUBY_RELEASE_DATE "2010-12-23"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20101221
-#define RUBY_PATCHLEVEL 329
+#define RUBY_RELEASE_CODE 20101223
+#define RUBY_PATCHLEVEL 330
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 12
-#define RUBY_RELEASE_DAY 21
+#define RUBY_RELEASE_DAY 23
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
