@@ -1,3 +1,8 @@
+Thu Dec 23 12:22:35 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb (Resolv::IPv4::Regex): make it only accept 0 to 255.
+	  [ruby-core:29501]
+
 Tue Dec 21 01:43:01 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
 
 	* lib/webrick/https.rb: uninitialized instance variables.
